comm.css
*{
    font-family: kanit, "sans serif";
    padding: 0;
    margin: 0;
    /* overflow:hidden; */
}
.allPage{
    max-width: 100%;
}
.allPage .header h2{
    font-weight: 450;
    text-align: center;
    padding: 15px;
}
.container ul li{
    list-style: none;
    padding: 10px 7px;
    border-radius: 10px;
    display: flex;
    align-items: center;
    width: 70%;
    margin: 0 auto;
    z-index: 9;
    &:hover{
        color: #fff;
        background-color: #1b1bff;
    }
}
.allPage .container{
    border-right: solid 2px hwb(0 100% 20%);
    width: 17%;
    height: 100vh;
    background-color: #fff;
    position: fixed;
    left: 0;
    font-size: 14px;
    font-weight: 500;
    z-index: 9;
}
.listes ul a{
    text-decoration: none;
    color: #000;
}
.listes .members-list li{
    text-align: center;
    background-color: #e4dbdb;
    border-radius: 10px;
    margin: 15px auto;
    justify-content: space-around;
    &:hover{
        background-color: #c4c4c4;
        color: #000;
    }
}
.listes #selected-liste{
    color: #fff;
    background-color: #1b1bff;
}
.content, .arrows, label{
    transform: translateX(10px);
}
#last-childs{
    translate: -10px 0;
    position: fixed;
    bottom: 10px;
    min-width: 17%;
}
#listes-content{
    transform: translateX(10px);
    display: none;
    width: 90%;
}
.emplayees-page{
    columns: 3;
    background-color: hwb(0 100% 15%);
    width: 83%;
    height: 780px;
    position: absolute;
    top: 0;
    right: 0;
    padding: 20px;
    overflow: hidden;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, 1fr);
    grid-template-areas: "details activity workingformat"
                        "details tracking timemanagement"
                        "total premiumbox timemanagement";
}
.emplayees-page .person-details{
    grid-area: details;
    background-color: #fff;
    padding: 10px;
    display: inline-flex;
    flex-direction: column;
    padding: 15px;
    position: relative;
}
.emplayees-page .person-details img{
    border-radius: 15px;
    margin: 0 auto;
    margin-top: 5px;
}
.emplayees-page .person-details .about-me{
    display: inline-flex;
    flex-direction: column;
    margin: 10px 0 0 10px;
}
.emplayees-page .person-details .about-me .property{
    color: hwb(0 80% 70%);
    font-size: .80rem;
    margin-top: 7px;
}
.emplayees-page .person-details .about-me #property{
    font-weight: 500;
    font-size: 1.05rem;
}
.emplayees-page .person-details .about-me h1{
    font-size: 1.8em;
    font-weight: 500;
    width: 200px;
    transform: translateX(5px);
}
.emplayees-page .person-details .about-me .icons1{
    width: 70px;
    border-radius: 0;
    text-align: center;
    translate: 225px -25px;
    display: flex;
    justify-content: space-between;
}
.emplayees-page .person-details .about-me .icons1 a i{
    color: #fff;
    background-color: #1b1bff;
    border-radius: 50%;
    padding: 5px;
    scale: 1.4;
    gap: 10px;
    &:hover{
        background-color: #1b1bfd;
        box-shadow: 1px 1px 20px 4px #1b1bfd;
    }
    &:active{
        background-color: #0101be;
    }
    translate: 10px -5px;
}
.emplayees-page .person-details .about-me .icons1 #i2{
    background-color: #1b1bff;
    color: #fff;
    border-radius: 50%;
    padding: 9px 10px 10px 7px;
    width: 5px;
    height: 3px;
    scale: 1.65;
    text-align: center;
    align-content: center;
}
/* Total Eork And Experience */

.emplayees-page .work-total{
    background-color: transparent;
    grid-area: total;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
    grid-template-areas: "days completed"
    "progress salary";
    color: #fff;
    height: 200px;
}
.emplayees-page .work-total div{
    padding: 10px;
    gap: 10px;
}
.emplayees-page .work-total .total-days{
    position: relative;
    gap: 10px;
    grid-area: days;
    background-color: hwb(351 44% 0%);
}
.emplayees-page .work-total  h2{
    font-weight: 350;
    display: inline-flex;
    font-size: 2em;
    margin-left: 10px;
    margin-right: 5px;
    flex-wrap: wrap;
} 
.emplayees-page .work-total span{
    font-size: .85em;
    font-weight: 200;
}
.emplayees-page .work-total svg{
    color: #fff;
}

.emplayees-page .work-total .total-projects-completed{
    position: relative;
    gap: 10px;
    grid-area: completed;
    background-color: hwb(120 0% 20%);
}

.emplayees-page .work-total .total-projects-progress{
    position: relative;
    gap: 10px;
    grid-area: progress;
    background-color: #2f2fe0;
}

.emplayees-page .work-total .total-salary{
    position: relative;
    grid-area: salary;
    gap: 10px;
    background-color: hsl(9, 98%, 48%);
}
.emplayees-page .work-total .lil-content{
    display: flex;
    align-items: center;
    justify-content: flex-start;
    font-size: 1.1em;
    translate: 0 15px;
}
.emplayees-page .work-total i{
    font-size: 1.05em;
}


/* weekly acrivity */

.emplayees-page .weekly-activity{
    grid-area: activity;
    background-color: #fff;
    position: relative;
    padding: 10px;
}
.emplayees-page .weekly-activity .chart-box{
    background-color: green;
    margin: 0 auto;
    width: 90%;
    height: 120px;
    text-align: center;
}
.emplayees-page .weekly-activity .chart-box h1{
    font-size: 1.7em;
}
.emplayees-page .weekly-activity img{
    background-color: #dbdbdb;
    padding: 5px;
    border-radius: 40px;
    display: flex;
    transform: translateX(calc((var(--i) * 2) * -15px));
    margin-left: 10px;
}
.emplayees-page .weekly-activity .developement-box{
    height: 100px;
    translate: 0 7px;
}
.emplayees-page .weekly-activity .developement{
    border: none;
    padding: 10px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    translate: 0 7px;
    margin-left: 20px;
}
.emplayees-page .weekly-activity .serching{
    border: none;
    padding: 10px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    order: 3;
    translate: 0 -10px;
    margin-left: 7px;
}
.emplayees-page .weekly-activity .or-span1{
    translate: -70px 0;
    font-size: .85em;
}
.emplayees-page .weekly-activity .or-span2{
    translate: -50px 0;
    font-size: .85em;
}
.emplayees-page hr{
    color: rgb(165, 165, 165);
    width: 90%;
    border: solid 1px rgb(185, 185, 185);
    margin: 0 auto;
}
.emplayees-page .weekly-activity .myspan {
    color: #9b9b9b;
}

/* Time Tracking Box */

.emplayees-page .time-tracking{
    grid-area: tracking;
    background-color: #fff;
    padding: 10px 10px 0 10px;
    height: 255px;
    overflow: hidden;
}
.emplayees-page .time-tracking .myH2{
    font-size: 1.15rem;
    margin: 5px;
}
.emplayees-page .time-tracking .time-box{
    width: 95%;
    margin: 0 auto;
    padding: 10px 20px;
    height: 80px;
    background-color: rgba(211, 211, 211, 0.7);
    position: relative;
}
.emplayees-page .time-tracking .myP1{
    font-size: .9em;
    color: hwb(0 61% 50%);
}
.emplayees-page .time-tracking .time-box i{
    position: absolute;
    right: 20px;
    top: 50%;
    transform: translateY(-50%);
    font-size: 2rem;
    color: #fff;
    background-color: #2f2fe0;
    border-radius: 15px;
    padding: 5px;
}
.emplayees-page .time-tracking .time-box h1{
    font-size: 2rem;
    font-weight: 300;
}
.emplayees-page .time-tracking .ui-boxes{
    margin-top: 10px;
}
.emplayees-page .time-tracking .ui-boxes img{
    background-color: #dbdbdb;
    padding: 7.5px;
    border-radius: 50%;
}
.emplayees-page .time-tracking .ui-boxes .ui1{
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 5px 0;
}
.emplayees-page .time-tracking .ui-boxes .ui1 i, .ui2 i{
    font-size: 1.1em;
}
.emplayees-page .time-tracking .ui-boxes .ui2{
    position: relative;
    bottom: -10px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 5px 0;
    opacity: .5;
    background-image: linear-gradient(to bottom, transparent, #fff);
}
.emplayees-page .time-tracking .ui-boxes .ui1 p{
    translate: -55px 0;
    font-weight: 450;
}
.emplayees-page .time-tracking .ui-boxes .ui2 p{
    translate: -67px 0;
    font-weight: 450;
}


.emplayees-page .premiumbox{
    grid-area: premiumbox;
    background-color: #fff;
}
.emplayees-page .working-format{
    grid-area: workingformat;
    background-color: #fff;
}
.emplayees-page .dates-management {
    grid-area: timemanagement;
    background-color: #fff;
}
.emplayees-page div{
    margin: 5px;
    border-radius: 17px;
}

